[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
lexer = { path = "../lexer" }
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
derive_more = { version = "2.0.1", features = ["display"] }
serial_test = "3.2.0"

[dev-dependencies]


[features]
#default = ["indent-log"]
default = []
indent-log = ["serial-test"]
serial-test = []
